plugins/de.ovgu.featureide.fm.core/src/de/ovgu/featureide/fm/core/io/velvet/VelvetParser.java
// $ANTLR 3.4 Velvet.g 2014-11-03 05:07:33

package de.ovgu.featureide.fm.core.io.velvet;

import de.ovgu.featureide.fm.core.FMCorePlugin;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class VelvetParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABSTRACT", "ACONSTR", "ATTR", "ATTR_OP_EQUALS", "ATTR_OP_GREATER", "ATTR_OP_GREATER_EQ", "ATTR_OP_LESS", "ATTR_OP_LESS_EQ", "ATTR_OP_NOT_EQUALS", "BASEEXT", "BASESPEC", "BOOLEAN", "CINTERFACE", "COLON", "COMMA", "CONCEPT", "CONSTR", "CONSTRAINT", "DEF", "EMPTY", "END_C", "END_R", "EQ", "ESC_SEQ", "EXPONENT", "FEAT", "FEATURE", "FLOAT", "GROUP", "HEX_DIGIT", "ID", "IDPath", "IMPORTINSTANCE", "IMPORTINTERFACE", "IMPORTREFERENCE", "INST", "INT", "INTF", "MANDATORY", "MINUS", "ML_COMMENT", "OCTAL_ESC", "ONEOF", "OPERAND", "OP_AND", "OP_EQUIVALENT", "OP_IMPLIES", "OP_NOT", "OP_OR", "OP_XOR", "PARAMETER", "PLUS", "REF", "SEMI", "SL_COMMENT", "SOMEOF", "START_C", "START_R", "STRING", "UNARYOP", "UNICODE_ESC", "USE", "USES", "VAR_BOOL", "VAR_FLOAT", "VAR_INT", "VAR_STRING", "WS"
    };

    public static final int EOF=-1;
    public static final int ABSTRACT=4;
    public static final int ACONSTR=5;
    public static final int ATTR=6;
    public static final int ATTR_OP_EQUALS=7;
    public static final int ATTR_OP_GREATER=8;
    public static final int ATTR_OP_GREATER_EQ=9;
    public static final int ATTR_OP_LESS=10;
    public static final int ATTR_OP_LESS_EQ=11;
    public static final int ATTR_OP_NOT_EQUALS=12;
    public static final int BASEEXT=13;
    public static final int BASESPEC=14;
    public static final int BOOLEAN=15;
    public static final int CINTERFACE=16;
    public static final int COLON=17;
    public static final int COMMA=18;
    public static final int CONCEPT=19;
    public static final int CONSTR=20;
    public static final int CONSTRAINT=21;
    public static final int DEF=22;
    public static final int EMPTY=23;
    public static final int END_C=24;
    public static final int END_R=25;
    public static final int EQ=26;
    public static final int ESC_SEQ=27;
    public static final int EXPONENT=28;
    public static final int FEAT=29;
    public static final int FEATURE=30;
    public static final int FLOAT=31;
    public static final int GROUP=32;
    public static final int HEX_DIGIT=33;
    public static final int ID=34;
    public static final int IDPath=35;
    public static final int IMPORTINSTANCE=36;
    public static final int IMPORTINTERFACE=37;
    public static final int IMPORTREFERENCE=38;
    public static final int INST=39;
    public static final int INT=40;
    public static final int INTF=41;
    public static final int MANDATORY=42;
    public static final int MINUS=43;
    public static final int ML_COMMENT=44;
    public static final int OCTAL_ESC=45;
    public static final int ONEOF=46;
    public static final int OPERAND=47;
    public static final int OP_AND=48;
    public static final int OP_EQUIVALENT=49;
    public static final int OP_IMPLIES=50;
    public static final int OP_NOT=51;
    public static final int OP_OR=52;
    public static final int OP_XOR=53;
    public static final int PARAMETER=54;
    public static final int PLUS=55;
    public static final int REF=56;
    public static final int SEMI=57;
    public static final int SL_COMMENT=58;
    public static final int SOMEOF=59;
    public static final int START_C=60;
    public static final int START_R=61;
    public static final int STRING=62;
    public static final int UNARYOP=63;
    public static final int UNICODE_ESC=64;
    public static final int USE=65;
    public static final int USES=66;
    public static final int VAR_BOOL=67;
    public static final int VAR_FLOAT=68;
    public static final int VAR_INT=69;
    public static final int VAR_STRING=70;
    public static final int WS=71;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public VelvetParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public VelvetParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return VelvetParser.tokenNames; }
    public String getGrammarFileName() { return "Velvet.g"; }


    @Override    
    public void emitErrorMessage(String msg) {
    	FMCorePlugin.getDefault().logError(new Exception(msg));
    }


    public static class velvetModel_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "velvetModel"
    // Velvet.g:83:1: velvetModel : ( concept | cinterface ) EOF ;
    public final VelvetParser.velvetModel_return velvetModel() throws RecognitionException {
        VelvetParser.velvetModel_return retval = new VelvetParser.velvetModel_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token EOF3=null;
        VelvetParser.concept_return concept1 =null;

        VelvetParser.cinterface_return cinterface2 =null;


        Tree EOF3_tree=null;

        try {
            // Velvet.g:84:2: ( ( concept | cinterface ) EOF )
            // Velvet.g:84:4: ( concept | cinterface ) EOF
            {
            root_0 = (Tree)adaptor.nil();


            // Velvet.g:84:4: ( concept | cinterface )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==CONCEPT) ) {
                alt1=1;
            }
            else if ( (LA1_0==CINTERFACE) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // Velvet.g:84:5: concept
                    {
                    pushFollow(FOLLOW_concept_in_velvetModel489);
                    concept1=concept();

                    state._fsp--;

                    adaptor.addChild(root_0, concept1.getTree());

                    }
                    break;
                case 2 :
                    // Velvet.g:84:13: cinterface
                    {
                    pushFollow(FOLLOW_cinterface_in_velvetModel491);
                    cinterface2=cinterface();

                    state._fsp--;

                    adaptor.addChild(root_0, cinterface2.getTree());

                    }
                    break;

            }


            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_velvetModel494); 
            EOF3_tree = 
            (Tree)adaptor.create(EOF3)
            ;
            adaptor.addChild(root_0, EOF3_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "velvetModel"


    public static class concept_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "concept"
    // Velvet.g:87:1: concept : CONCEPT ID ( ATTR_OP_LESS conceptBaseSpec ( definitionsSpec )? | ( COLON conceptBaseExt )? ( parameter )? ( definitions )? ) -> ^( CONCEPT ID ( conceptBaseSpec )? ( conceptBaseExt )? ( parameter )? ( definitions )? ) ;
    public final VelvetParser.concept_return concept() throws RecognitionException {
        VelvetParser.concept_return retval = new VelvetParser.concept_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token CONCEPT4=null;
        Token ID5=null;
        Token ATTR_OP_LESS6=null;
        Token COLON9=null;
        VelvetParser.conceptBaseSpec_return conceptBaseSpec7 =null;

        VelvetParser.definitionsSpec_return definitionsSpec8 =null;

        VelvetParser.conceptBaseExt_return conceptBaseExt10 =null;

        VelvetParser.parameter_return parameter11 =null;

        VelvetParser.definitions_return definitions12 =null;


        Tree CONCEPT4_tree=null;
        Tree ID5_tree=null;
        Tree ATTR_OP_LESS6_tree=null;
        Tree COLON9_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_ATTR_OP_LESS=new RewriteRuleTokenStream(adaptor,"token ATTR_OP_LESS");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_CONCEPT=new RewriteRuleTokenStream(adaptor,"token CONCEPT");
        RewriteRuleSubtreeStream stream_conceptBaseExt=new RewriteRuleSubtreeStream(adaptor,"rule conceptBaseExt");
        RewriteRuleSubtreeStream stream_parameter=new RewriteRuleSubtreeStream(adaptor,"rule parameter");
        RewriteRuleSubtreeStream stream_conceptBaseSpec=new RewriteRuleSubtreeStream(adaptor,"rule conceptBaseSpec");
        RewriteRuleSubtreeStream stream_definitions=new RewriteRuleSubtreeStream(adaptor,"rule definitions");
        RewriteRuleSubtreeStream stream_definitionsSpec=new RewriteRuleSubtreeStream(adaptor,"rule definitionsSpec");
        try {
            // Velvet.g:88:2: ( CONCEPT ID ( ATTR_OP_LESS conceptBaseSpec ( definitionsSpec )? | ( COLON conceptBaseExt )? ( parameter )? ( definitions )? ) -> ^( CONCEPT ID ( conceptBaseSpec )? ( conceptBaseExt )? ( parameter )? ( definitions )? ) )
            // Velvet.g:88:4: CONCEPT ID ( ATTR_OP_LESS conceptBaseSpec ( definitionsSpec )? | ( COLON conceptBaseExt )? ( parameter )? ( definitions )? )
            {
            CONCEPT4=(Token)match(input,CONCEPT,FOLLOW_CONCEPT_in_concept507);  
            stream_CONCEPT.add(CONCEPT4);


            ID5=(Token)match(input,ID,FOLLOW_ID_in_concept509);  
            stream_ID.add(ID5);


            // Velvet.g:89:3: ( ATTR_OP_LESS conceptBaseSpec ( definitionsSpec )? | ( COLON conceptBaseExt )? ( parameter )? ( definitions )? )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ATTR_OP_LESS) ) {
                alt6=1;
            }
            else if ( (LA6_0==EOF||LA6_0==COLON||(LA6_0 >= IMPORTINSTANCE && LA6_0 <= IMPORTINTERFACE)||LA6_0==START_C) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // Velvet.g:89:4: ATTR_OP_LESS conceptBaseSpec ( definitionsSpec )?
                    {
                    ATTR_OP_LESS6=(Token)match(input,ATTR_OP_LESS,FOLLOW_ATTR_OP_LESS_in_concept516);  
                    stream_ATTR_OP_LESS.add(ATTR_OP_LESS6);


                    pushFollow(FOLLOW_conceptBaseSpec_in_concept518);
                    conceptBaseSpec7=conceptBaseSpec();

                    state._fsp--;

                    stream_conceptBaseSpec.add(conceptBaseSpec7.getTree());

                    // Velvet.g:89:33: ( definitionsSpec )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==START_C) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // Velvet.g:89:33: definitionsSpec
                            {
                            pushFollow(FOLLOW_definitionsSpec_in_concept520);
                            definitionsSpec8=definitionsSpec();

                            state._fsp--;

                            stream_definitionsSpec.add(definitionsSpec8.getTree());

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // Velvet.g:90:3: ( COLON conceptBaseExt )? ( parameter )? ( definitions )?
                    {
                    // Velvet.g:90:3: ( COLON conceptBaseExt )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==COLON) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // Velvet.g:90:4: COLON conceptBaseExt
                            {
                            COLON9=(Token)match(input,COLON,FOLLOW_COLON_in_concept528);  
                            stream_COLON.add(COLON9);


                            pushFollow(FOLLOW_conceptBaseExt_in_concept530);
                            conceptBaseExt10=conceptBaseExt();

                            state._fsp--;

                            stream_conceptBaseExt.add(conceptBaseExt10.getTree());

                            }
                            break;

                    }


                    // Velvet.g:90:27: ( parameter )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( ((LA4_0 >= IMPORTINSTANCE && LA4_0 <= IMPORTINTERFACE)) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // Velvet.g:90:27: parameter
                            {
                            pushFollow(FOLLOW_parameter_in_concept534);
                            parameter11=parameter();

                            state._fsp--;

                            stream_parameter.add(parameter11.getTree());

                            }
                            break;

                    }


                    // Velvet.g:91:3: ( definitions )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==START_C) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // Velvet.g:91:3: definitions
                            {
                            pushFollow(FOLLOW_definitions_in_concept540);
                            definitions12=definitions();

                            state._fsp--;

                            stream_definitions.add(definitions12.getTree());

                            }
                            break;

                    }


                    }
                    break;

            }


            // AST REWRITE
            // elements: parameter, conceptBaseExt, conceptBaseSpec, ID, CONCEPT, definitions
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 92:2: -> ^( CONCEPT ID ( conceptBaseSpec )? ( conceptBaseExt )? ( parameter )? ( definitions )? )
            {
                // Velvet.g:92:5: ^( CONCEPT ID ( conceptBaseSpec )? ( conceptBaseExt )? ( parameter )? ( definitions )? )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                stream_CONCEPT.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                // Velvet.g:92:18: ( conceptBaseSpec )?
                if ( stream_conceptBaseSpec.hasNext() ) {
                    adaptor.addChild(root_1, stream_conceptBaseSpec.nextTree());

                }
                stream_conceptBaseSpec.reset();

                // Velvet.g:92:35: ( conceptBaseExt )?
                if ( stream_conceptBaseExt.hasNext() ) {
                    adaptor.addChild(root_1, stream_conceptBaseExt.nextTree());

                }
                stream_conceptBaseExt.reset();

                // Velvet.g:92:51: ( parameter )?
                if ( stream_parameter.hasNext() ) {
                    adaptor.addChild(root_1, stream_parameter.nextTree());

                }
                stream_parameter.reset();

                // Velvet.g:92:62: ( definitions )?
                if ( stream_definitions.hasNext() ) {
                    adaptor.addChild(root_1, stream_definitions.nextTree());

                }
                stream_definitions.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "concept"


    public static class parameter_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parameter"
    // Velvet.g:95:1: parameter : ( instanceImports interfaceImports | interfaceImports instanceImports | interfaceImports | instanceImports ) ( referenceImports )? -> ^( PARAMETER ( instanceImports )? ( interfaceImports )? ( referenceImports )? ) ;
    public final VelvetParser.parameter_return parameter() throws RecognitionException {
        VelvetParser.parameter_return retval = new VelvetParser.parameter_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        VelvetParser.instanceImports_return instanceImports13 =null;

        VelvetParser.interfaceImports_return interfaceImports14 =null;

        VelvetParser.interfaceImports_return interfaceImports15 =null;

        VelvetParser.instanceImports_return instanceImports16 =null;

        VelvetParser.interfaceImports_return interfaceImports17 =null;

        VelvetParser.instanceImports_return instanceImports18 =null;

        VelvetParser.referenceImports_return referenceImports19 =null;


        RewriteRuleSubtreeStream stream_referenceImports=new RewriteRuleSubtreeStream(adaptor,"rule referenceImports");
        RewriteRuleSubtreeStream stream_instanceImports=new RewriteRuleSubtreeStream(adaptor,"rule instanceImports");
        RewriteRuleSubtreeStream stream_interfaceImports=new RewriteRuleSubtreeStream(adaptor,"rule interfaceImports");
        try {
            // Velvet.g:96:2: ( ( instanceImports interfaceImports | interfaceImports instanceImports | interfaceImports | instanceImports ) ( referenceImports )? -> ^( PARAMETER ( instanceImports )? ( interfaceImports )? ( referenceImports )? ) )
            // Velvet.g:96:4: ( instanceImports interfaceImports | interfaceImports instanceImports | interfaceImports | instanceImports ) ( referenceImports )?
            {
            // Velvet.g:96:4: ( instanceImports interfaceImports | interfaceImports instanceImports | interfaceImports | instanceImports )
            int alt7=4;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // Velvet.g:96:5: instanceImports interfaceImports
                    {
                    pushFollow(FOLLOW_instanceImports_in_parameter575);
                    instanceImports13=instanceImports();

                    state._fsp--;

                    stream_instanceImports.add(instanceImports13.getTree());

                    pushFollow(FOLLOW_interfaceImports_in_parameter577);
                    interfaceImports14=interfaceImports();

                    state._fsp--;

                    stream_interfaceImports.add(interfaceImports14.getTree());

                    }
                    break;
                case 2 :
                    // Velvet.g:96:40: interfaceImports instanceImports
                    {
                    pushFollow(FOLLOW_interfaceImports_in_parameter581);
                    interfaceImports15=interfaceImports();

                    state._fsp--;

                    stream_interfaceImports.add(interfaceImports15.getTree());

                    pushFollow(FOLLOW_instanceImports_in_parameter583);
                    instanceImports16=instanceImports();

                    state._fsp--;

                    stream_instanceImports.add(instanceImports16.getTree());

                    }
                    break;
                case 3 :
                    // Velvet.g:96:75: interfaceImports
                    {
                    pushFollow(FOLLOW_interfaceImports_in_parameter587);
                    interfaceImports17=interfaceImports();

                    state._fsp--;

                    stream_interfaceImports.add(interfaceImports17.getTree());

                    }
                    break;
                case 4 :
                    // Velvet.g:96:94: instanceImports
                    {
                    pushFollow(FOLLOW_instanceImports_in_parameter591);
                    instanceImports18=instanceImports();

                    state._fsp--;

                    stream_instanceImports.add(instanceImports18.getTree());

                    }
                    break;

            }


            // Velvet.g:96:111: ( referenceImports )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==IMPORTREFERENCE) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // Velvet.g:96:111: referenceImports
                    {
                    pushFollow(FOLLOW_referenceImports_in_parameter594);
                    referenceImports19=referenceImports();

                    state._fsp--;

                    stream_referenceImports.add(referenceImports19.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: interfaceImports, referenceImports, instanceImports
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 97:2: -> ^( PARAMETER ( instanceImports )? ( interfaceImports )? ( referenceImports )? )
            {
                // Velvet.g:97:5: ^( PARAMETER ( instanceImports )? ( interfaceImports )? ( referenceImports )? )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                (Tree)adaptor.create(PARAMETER, "PARAMETER")
                , root_1);

                // Velvet.g:97:17: ( instanceImports )?
                if ( stream_instanceImports.hasNext() ) {
                    adaptor.addChild(root_1, stream_instanceImports.nextTree());

                }
                stream_instanceImports.reset();

                // Velvet.g:97:34: ( interfaceImports )?
                if ( stream_interfaceImports.hasNext() ) {
                    adaptor.addChild(root_1, stream_interfaceImports.nextTree());

                }
                stream_interfaceImports.reset();

                // Velvet.g:97:52: ( referenceImports )?
                if ( stream_referenceImports.hasNext() ) {
                    adaptor.addChild(root_1, stream_referenceImports.nextTree());

                }
                stream_referenceImports.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Tree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "parameter"


    public static class conceptBaseExt_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conceptBaseExt"
    // Velvet.g:100:1: conceptBaseExt : ID ( COMMA ID )* -> ^( BASEEXT ( ID )+ ) ;
    public final VelvetParser.conceptBaseExt_return conceptBaseExt() throws RecognitionException {
        VelvetParser.conceptBaseExt_return retval = new VelvetParser.conceptBaseExt_return();
        retval.start = input.LT(1);


        Tree root_0 = null;

        Token ID20=null;
        Token COMMA21=null;
        Token ID22=null;

        Tree ID20_tree=null;
        Tree COMMA21_tree=null;
        Tree ID22_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");

        try {
            // Velvet.g:101:2: ( ID ( COMMA ID )* -> ^( BASEEXT ( ID )+ ) )
            // Velvet.g:101:4: ID ( COMMA ID )*
            {
            ID20=(Token)match(input,ID,FOLLOW_ID_in_conceptBaseExt622);  
            stream_ID.add(ID20);


            // Velvet.g:101:7: ( COMMA ID )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==COMMA) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // Velvet.g:101:8: COMMA ID
            	    {
            	    COMMA21=(Token)match(input,COMMA,FOLLOW_COMMA_in_conceptBaseExt625);  
            	    stream_COMMA.add(COMMA21);


            	    ID22=(Token)match(input,ID,FOLLOW_ID_in_conceptBaseExt627);  
            	    stream_ID.add(ID22);


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            // AST REWRITE
            // elements: ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 102:2: -> ^( BASEEXT ( ID )+ )
            {
                // Velvet.g:102:5: ^( BASEEXT ( ID )+ )
                {
                Tree root_1 = (Tree)adaptor.nil();
                root_1 = (Tree)adaptor.becomeRoot(
                (Tree)adaptor.create(BASEEXT, "BASEEXT")
                , root_1);

                if ( !(stream_ID.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_ID.hasNext() ) {
                    adaptor.addChild(root_1, 
                    stream_ID.nextNode()
                    );

                }
                stream_ID.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
